# change0

./: .gitignore  :q  CMakeLists.txt  README.md  build.sh  debug.sh  deep-search-result.txt  dump.json  graphview.sh  received.txt
c/: config.h  globals.c  globals.h  main.c
c/cli/: ui.c  ui.h
c/lib/: util.c  util.h
c/lib/deep-research/: deep-research.c  deep-research.h
c/lib/hd/: README.md  hashdict.c  hashdict.h
c/lib/hm/: hashdict.h
c/lib/jsonp/: json.h
c/lib/ne/: connection.c  connection.h  engine.c  engine.h  node.c  node.h  search.c  search.h
c/lib/openai/: mockopenai.c  mockopenai.h  openai.c  openai.h
c/lib/util/: change-errors.c  change-errors.h  util.c  util.h
c/ne/: deep-search-execute.c  deep-search-execute.h  deep-search-session.c  deep-search-session.h  deep-search.c  deep-search.h  engine.c  engine.h  graph-engine.c  graph-export.c  graph-export.h  input-processor.c  input-processor.h  json-to-graph.c  json-to-graph.h  mocks.c  mocks.h  node.c  node.h  search.c  search.h
c/ne/goal/: goal-ai.c  goal-ai.h  goal-info.c  goal-info.h  goal-util.c  goal-util.h  goal.c  goal.h
c/ne/graph/: graph-engine.c  graph-engine.h  graph-export.c  graph-export.h
c/ne/input/: input-processor.c  input-processor.h  json-to-graph.c  json-to-graph.h
c/ne/mocks/: mocks.c  mocks.h
c/ne/search/: ai-action.c  ai-action.h  command-parsing.c  command-parsing.h  deep-search-execute.c  deep-search-execute.h  deep-search-session.c  deep-search-session.h  search.c  search.h
c/srv/: http-server.c  http-server.h
js/: export.json  graph.html  index.html
js/app/: bootstrap.js  graph-view.js  shared.js
mocks/action-data/: 0.json  1.json  2.json  3.json  action_000.json  action_001.json  action_002.json  action_003.json  action_004.json  action_005.json  action_006.json  action_007.json  action_008.json  action_009.json  action_010.json  action_011.json  action_012.json  action_013.json  action_014.json  action_015.json  action_016.json  action_017.json  action_018.json  action_019.json
mocks/nodes/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  graph_000.json  graph_001.json  graph_002.json  graph_003.json  graph_004.json  graph_005.json  graph_006.json  graph_007.json  graph_008.json  graph_009.json  graph_010.json  graph_011.json  o.json
notes/: gpt-advice-container.md
react/: capacitor.config.ts  package-lock.json  package.json
react/ios/App/App/: Info.plist
react/ios/App/App.xcodeproj/: project.pbxproj
react/src/: App.tsx  goal.ts  index.css
react/src/config/: server.ts
react/src/section/: goal-view.tsx
